# tuck

./: ARCHIVE_TOOL_REQUIREMENTS.md  CLAUDE.md  LICENSE  README.md  build-ffi.sh  bump-version.sh  install.sh
.github/workflows/: release.yml
TuckApp/: project.yml
TuckApp/TuckApp/: ContentView.swift  TuckAppApp.swift
TuckApp/TuckApp.xcodeproj/: project.pbxproj
TuckApp/TuckApp.xcodeproj/project.xcworkspace/xcuserdata/legendword.xcuserdatad/: UserInterfaceState.xcuserstate
TuckApp/TuckApp.xcodeproj/xcuserdata/legendword.xcuserdatad/xcschemes/: xcschememanagement.plist
TuckApp/TuckApp/Models/: ProgressReporter.swift  TuckService.swift
TuckApp/TuckApp/Views/: DetailView.swift  DrivePicker.swift  ProgressOverlay.swift  SidebarView.swift
crates/tuck-cli/: Cargo.toml
crates/tuck-cli/src/: main.rs
crates/tuck-cli/src/commands/: add.rs  config.rs  list.rs  mod.rs  restore.rs  status.rs  update.rs  verify.rs
crates/tuck-core/: Cargo.toml
crates/tuck-core/src/: archive.rs  checksum.rs  config.rs  copy.rs  drive.rs  error.rs  lib.rs  manifest.rs  pending.rs  progress.rs  restore.rs  update.rs  verify.rs
crates/tuck-ffi/: Cargo.toml
crates/tuck-ffi/src/: error.rs  functions.rs  lib.rs  progress.rs  types.rs
