[package]
name = "tuck-core"
version = "0.2.0"
edition = "2021"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
filetime = "0.2"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
